# thingbooker

./: .gitignore  .pre-commit-config.yaml  README.md  dev-template.env  docker-compose.yml
.github/: CODEOWNERS  CONTRIBUTING.md
thingbooker-backend/: .gitignore  manage.py  pyproject.toml  signals.py
thingbooker-backend/thingbooker/: asgi.py  base_models.py  base_permissions.py  base_types.py  router.py  urls.py  utils.py  wsgi.py
thingbooker-backend/thingbooker/common-static/thingbooker/manifest/: thingbooker.webmanifest
thingbooker-backend/thingbooker/mail/: apps.py  interface.py
thingbooker-backend/thingbooker/mail/templates/mail/things/: invite_user_to_thing.html  invite_user_to_thing.txt  notify_booking_status_changed.html  notify_booking_status_changed.txt  notify_owner_of_new_booking.html  notify_owner_of_new_booking.txt
thingbooker-backend/thingbooker/mail/templates/mail/users/: invite_user_to_group.html  invite_user_to_group.txt
thingbooker-backend/thingbooker/settings/: __init__.py  settings.py
thingbooker-backend/thingbooker/templates/allauth/email/: account_already_exists.html  account_already_exists_message.txt  account_already_exists_subject.txt  base_message.html  base_message.txt  email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.html  password_reset_key_message.txt  unknown_account_message.html  unknown_account_message.txt  unknown_account_subject.txt
thingbooker-backend/thingbooker/templates/rest_framework/: api.html
thingbooker-backend/thingbooker/things/: admin.py  apps.py  enums.py  interface.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
thingbooker-backend/thingbooker/things/migrations/: 0001_initial.py  0002_alter_booking_end_date_alter_booking_num_people_and_more.py
thingbooker-backend/thingbooker/users/: admin.py  apps.py  enums.py  interface.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
thingbooker-backend/thingbooker/users/migrations/: 0001_initial.py  0002_acceptinvitetoken.py  0002_thingbookergroup.py  0003_alter_thingbookeruser_email_and_more.py  0003_alter_thingbookeruser_managers_and_more.py  0004_acceptthinginvitetoken.py  0004_thingbookeruser_avatar.py  0005_rename_acceptinvitetoken_acceptgroupinvitetoken.py  0005_thingbookergroup_group_picture_and_more.py
thingbooker-frontend/: package.json  tailwind.config.js
thingbooker-frontend/src/: app.html  hooks.server.ts
thingbooker-frontend/src/lib/components/: Button.svelte  Link.svelte  NavbarButton.svelte  UserAvatar.svelte
thingbooker-frontend/src/lib/components/forms/: Checkbox.svelte  Input.svelte
thingbooker-frontend/src/lib/components/svg/: CalendarSvg.svelte  GroupSvg.svelte  HamburgerMenuSvg.svelte  HouseSvg.svelte  index.ts
thingbooker-frontend/src/lib/types/: auth.ts  index.ts  style.ts  things.ts
thingbooker-frontend/src/lib/utils/: auth.ts  backend.ts  constants.ts  style.ts
thingbooker-frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
thingbooker-frontend/src/routes/(unauthenticated)/: +layout.server.ts  +layout.svelte
thingbooker-frontend/src/routes/(unauthenticated)/auth/: +layout.server.ts
thingbooker-frontend/src/routes/(unauthenticated)/auth/login/: +page.server.ts  +page.svelte
thingbooker-frontend/src/routes/tb/: +layout.svelte  +page.ts
thingbooker-frontend/src/routes/tb/book/: +page.svelte
thingbooker-frontend/src/routes/tb/groups/: +page.svelte
thingbooker-frontend/src/routes/things/: +page.svelte
