[tool.poetry]
name = "thingbooker-backend"
version = "0.1.0"
description = "Simple webapp for booking things in a shared group!"
authors = ["Erlend Paulsen Skaaden <erlendskaaden@gmail.com>"]
readme = "README.md"
packages = [{ include = "thingbooker" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
drf-spectacular = "^0.27.0"
django-guardian = "^2.4.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
django-choices-field = "^2.2.2"
django-oauth-toolkit = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
