[tool.poetry]
name = "thingbooker-backend"
version = "0.1.0"
description = "Simple webapp for booking things in a shared group!"
authors = ["Erlend Paulsen Skaaden <erlendskaaden@gmail.com>"]
readme = "README.md"
packages = [{ include = "thingbooker" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
drf-spectacular = "^0.27.0"
django-guardian = "^2.4.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
django-choices-field = "^2.2.2"
django-oauth-toolkit = "^2.3.0"
djlint = "^1.34.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
printf-log-formatter = "^0.3.0"
django-upgrade = "^1.15.0"
mypy = "^1.8.0"
django-stubs = "^4.2.7"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "thingbooker/**/migrations/*.py",
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F", "B", "DJ", "I", "UP", "TCH", "D100", "D101", "D102", "D103"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"
docstring-code-format = false
