[tool.poetry]
name = "thingbooker-backend"
version = "0.1.0"
description = "Simple webapp for booking things in a shared group!"
authors = ["Erlend Paulsen Skaaden <erlendskaaden@gmail.com>"]
readme = "README.md"
packages = [{ include = "thingbooker" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
drf-spectacular = "^0.27.0"
django-guardian = "^2.4.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
django-choices-field = "^2.2.2"
djlint = "^1.34.1"
python-decouple = "^3.8"
bpython = "^0.24"
dj-rest-auth = { extras = ["with-social"], version = "^5.0.2" }
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
printf-log-formatter = "^0.3.0"
django-upgrade = "^1.15.0"
ruff = "^0.1.9"
mypy = ">=1.7.0,<1.8.0"
djangorestframework-stubs = { extras = [
  "compatible-mypy",
], version = "^3.14.5" }
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "thingbooker/**/migrations/*.py",
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F", "B", "DJ", "I", "UP", "TCH", "D101", "D102", "D103"]
ignore = ["DJ008"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"
docstring-code-format = false

[tool.mypy]
exclude = "(?x)(build/.+|node_modules/.+|deployment/.+|.github/.+|locale/.+)"
disable_error_code = [
  "annotation-unchecked",
  "assignment",
  "attr-defined",
  "override",
]
python_version = "3.11"
show_column_numbers = true
show_error_context = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_no_return = false
warn_redundant_casts = true
local_partial_types = true
strict_optional = true
incremental = true
warn_unused_configs = true
show_error_codes = true
plugins = ["mypy_drf_plugin.main", "mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "thingbooker.*.migrations.*"
ignore_errors = true                  # Legitimate exclusions

[[tool.mypy.overrides]]
module = "thingbooker.settings.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "thingbooker.settings"
